--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -62,6 +62,7 @@
   border-radius: 5px;
   padding: 20px;
   width: 80%;
+  margin-bottom: 20px;
 }
 
 .error p {
@@ -88,7 +89,6 @@
 @media screen and (min-width: 1024px) {
   .new-tweet {
   top: 0;
-  /* position: sticky; */
   flex-grow: 1;
   padding-top: 6px;
   }
